--- a/.github/workflows/openwrt5.15.yml
+++ b/.github/workflows/openwrt5.15.yml
@@ -20,7 +20,7 @@ on:
     - cron: 0 17 */5 * *
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/350886/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: 5.15.config
@@ -162,7 +162,7 @@ jobs:
         echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
         echo "功能介绍：含istore商店、Docker、Mosdns、定时重拨、Openclash、SSR、UU加速等插件。" >> release.txt
-        echo "[固件源码](https://github.com/coolsnowwolf/lede)" >> release.txt
+        echo "[固件源码](https://github.com/350886/lede)" >> release.txt
         echo "由衷感谢所有为openwrt无私奉献的大佬们" >> release.txt
         echo "📥 固件下载" >> release.txt
         [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [国内NN网盘](${{ steps.cowtransfer.outputs.url }})" >> release.txt
